<resources>
    <string name="app_name">Arena_Fighter_Android</string>

    <string name="nameEntryEditText">Enter a name</string>

    //Buttons
    <string name="arenaBtn">Fight in the Arena</string>
    <string name="trainingBtn">Train yourself</string>
    <string name="talkToFansBtn">Talk to your fans</string>

    <string name="joinArenaButton">Join the Arena</string>
    <string name="settingsButton">Settings</string>
    <string name="nameSubmitButton">Continue</string>

    <string name="backToWaitingRoomButton">Back to Waiting Room</string>
    <string name="trainStrengthButton">Train Strength</string>
    <string name="trainEnduranceButton">Train Endurance</string>
    <string name="trainFatigueButton">Train Fatigue</string>

    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>

    <string name="continueButton">Continue</string>

    <string name="arenaAttackButton">Attack</string>
    <string name="arenaDefendButton">Defend</string>

    <string name="classChoiceBeginnerButton">Beginner</string>
    <string name="classChoiceRegularButton">Regular</string>
    <string name="classChoiceAdvancedButton">Advanced</string>
    <string name="classChoiceExpertButton">Expert</string>
    <string name="classChoiceChampionButton">Champion</string>

    <string name="talkWithFansTalkToFanButton">Talk to your fans</string>

    //Character information
    <string name="statsTextView">Stats</string>
    <string name="nameTextView">Aaren</string>
    <string name="nameDescriptionTextView">Name:</string>
    <string name="cashDescriptionTextView">Cash: $</string>
    <string name="cashTextView">15</string>
    <string name="fanDescriptionTextView">Fans:</string>
    <string name="fanTextView">0</string>
    <string name="strengthDescriptionTextView">Strength:</string>
    <string name="strengthTextView">1</string>
    <string name="enduranceDescriptionTextView">Endurance:</string>
    <string name="enduranceTextView">5</string>
    <string name="fatigueDescriptionTextView">Fatigue:</string>
    <string name="fatigueTextView">1</string>
    <string name="totalFightsDescriptionTextView">Total Fights:</string>
    <string name="totalFightsTextView">0</string>
    <string name="fightsWonDescriptionTextView">Fights Won:</string>
    <string name="fightsWonTextView">0</string>
    <string name="fightsLostDescriptionTextView">Fights Lost:</string>
    <string name="fightsLostTextView">0</string>

    //In Game Text
    <string name="notEnoughCash">"You don't have enough cash to train!"</string>
    <string name="healthDescription">Health:</string>
    <string name="classChoiceText">Choose the class you wish to fight in!</string>
    <string name="classChoiceBetTextTextView">How much would you like to bet?</string>
    <string name="classChoiceBetTextEditText">Bet?</string>
    <string name="classChoiceBadBetTextTextView">You don\'t have enough cash \nto make that bet!</string>
</resources>
