<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/waitingRoomImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/waiting_room_background" />

    <Button
        android:id="@+id/arenaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/arenaBtn"
        app:layout_constraintEnd_toEndOf="@+id/waitingRoomImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/trainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/trainingBtn"
        app:layout_constraintEnd_toEndOf="@+id/waitingRoomImageView"
        app:layout_constraintTop_toBottomOf="@+id/arenaBtn" />

    <Button
        android:id="@+id/talkToFansBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/talkToFansBtn"
        app:layout_constraintBottom_toTopOf="@+id/txtBackgroundImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainBtn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/txtBackgroundImageView"
        android:layout_width="229dp"
        android:layout_height="136dp"
        android:layout_marginBottom="68dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/waitingRoomImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/text_background" />

    <TextView
        android:id="@+id/nameDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="160dp"
        android:text="@string/nameDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nameTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="@string/nameTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cashDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/cashDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDescriptionTextView" />

    <TextView
        android:id="@+id/cashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/cashTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cashDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/fanDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/fanDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cashDescriptionTextView" />

    <TextView
        android:id="@+id/fanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/fanTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/fanDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/cashTextView" />

    <ImageView
        android:id="@+id/statsBackgroundImageView"
        android:layout_width="181dp"
        android:layout_height="267dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/txtBackgroundImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/waitingRoomImageView"
        app:layout_constraintVertical_bias="0.88"
        app:srcCompat="@drawable/text_background" />

    <TextView
        android:id="@+id/strengthDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/strengthDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toTopOf="@+id/statsBackgroundImageView" />

    <TextView
        android:id="@+id/strengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:text="@string/strengthTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toTopOf="@+id/statsBackgroundImageView" />

    <TextView
        android:id="@+id/enduranceDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/enduranceDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/strengthDescriptionTextView" />

    <TextView
        android:id="@+id/enduranceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/enduranceTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/strengthTextView" />

    <TextView
        android:id="@+id/fatigueDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/fatigueDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/enduranceDescriptionTextView" />

    <TextView
        android:id="@+id/fatigueTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/fatigueTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/enduranceTextView" />

    <TextView
        android:id="@+id/totalFightsDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/totalFightsDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/fatigueDescriptionTextView" />

    <TextView
        android:id="@+id/totalFightsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/totalFightsTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/fatigueTextview" />

    <TextView
        android:id="@+id/fightsWonDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/fightsWonDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/totalFightsDescriptionTextView" />

    <TextView
        android:id="@+id/fightsWonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/fightsWonTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/totalFightsTextView" />

    <TextView
        android:id="@+id/fightsLostDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/fightsLostDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/fightsWonDescriptionTextView" />

    <TextView
        android:id="@+id/fightsLostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/fightsLostTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/fightsWonTextView" />

    <TextView
        android:id="@+id/statsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:text="@string/statsTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/strengthDescriptionTextView"
        app:layout_constraintEnd_toEndOf="@+id/statsBackgroundImageView"
        app:layout_constraintStart_toStartOf="@+id/statsBackgroundImageView"
        app:layout_constraintTop_toTopOf="@+id/statsBackgroundImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>