<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TalWithFans">

    <ImageView
        android:id="@+id/talkWithFansBackgroundImageView"
        android:layout_width="407dp"
        android:layout_height="728dp"
        android:scaleType="centerCrop"
        android:src="@drawable/arena_fighter_fan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/TalkWithFansTalkToFanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/talkToFansBtn"
        app:layout_constraintBottom_toTopOf="@+id/talkWithFandTextBackgroundImageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/talkWithFandTextBackgroundImageView"
        android:layout_width="380dp"
        android:layout_height="244dp"
        android:scaleType="centerCrop"
        android:src="@drawable/text_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/talkWithFansBackgroundImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/talkWithFansTextTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/talkWithFandTextBackgroundImageView"
        app:layout_constraintStart_toStartOf="@+id/talkWithFandTextBackgroundImageView"
        app:layout_constraintTop_toTopOf="@+id/talkWithFandTextBackgroundImageView" />

    <ImageView
        android:id="@+id/talkWithFansStatWindowImageView"
        android:layout_width="179dp"
        android:layout_height="115dp"
        android:scaleType="centerCrop"
        android:src="@drawable/text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/talkWithFansNadeDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/nameDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/talkWithFansFanDescriptionTextView"
        app:layout_constraintStart_toStartOf="@+id/talkWithFansStatWindowImageView"
        app:layout_constraintTop_toTopOf="@+id/talkWithFansBackgroundImageView" />

    <TextView
        android:id="@+id/talkWithFansNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/nameTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/talkWithFansFanTextView"
        app:layout_constraintEnd_toEndOf="@+id/talkWithFansStatWindowImageView"
        app:layout_constraintTop_toTopOf="@+id/talkWithFansBackgroundImageView" />

    <TextView
        android:id="@+id/talkWithFansFanDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/fanDescriptionTextView"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/talkWithFansStatWindowImageView"
        app:layout_constraintStart_toStartOf="@+id/talkWithFansStatWindowImageView" />

    <TextView
        android:id="@+id/talkWithFansFanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="0"
        android:textColor="#CDDC39"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/talkWithFansStatWindowImageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/talkWithFansBackToWaitingRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/backToWaitingRoomButton"
        app:layout_constraintBottom_toTopOf="@+id/TalkWithFansTalkToFanButton"
        app:layout_constraintEnd_toEndOf="@+id/talkWithFansBackgroundImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>